cmake_minimum_required(VERSION 3.16)
set(TARGET_NAME qwt-example)
project(${TARGET_NAME})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC_SEARCH_PATHS ui)
set(QWT_HEADERS D:/github/clones/qwt-git/classincludes)
set(QWT_INCLUDES D:/github/clones/qwt-git/src)
if (CMAKE_BUILD_TYPE MATCHES "Debug")
    set(QWT_LIBRARY D:/github/clones/build-qwt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/lib/qwtd.lib)
else()
    set(QWT_LIBRARY D:/github/clones/build-qwt-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/lib/qwt.lib)
endif()
find_package(Qt5 COMPONENTS Widgets LinguistTools REQUIRED)
add_executable(${TARGET_NAME} src/main.cxx)
target_include_directories(${TARGET_NAME} PRIVATE ${QWT_INCLUDES})
target_include_directories(${TARGET_NAME} PRIVATE ${QWT_HEADERS})
target_include_directories(${TARGET_NAME} PRIVATE inc)
target_link_libraries(${TARGET_NAME} PUBLIC Qt5::Widgets ${QWT_LIBRARY})
